--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -67,7 +67,7 @@
               {{ if .Site.Menus.main }}
               {{ range .Site.Menus.main }}
               <li style="margin-left: 1rem;">
-                <a class="decoration-primary-500 hover:text-neutral-500" href="{{ .URL }}" title="{{ .Title }}">{{
+                <a class="decoration-primary-500 hover:text-neutral-500 hover:underline hover:decoration-1 hover:underline-offset-2 hover:text-gray-400 hover:decoration-wavy" href="{{ .URL }}" title="{{ .Title }}">{{
                   .Name
                   | markdownify | emojify }}</a>
               </li>
