--- a/themes/kscu-theme/layouts/_default/baseof.html
+++ b/themes/kscu-theme/layouts/_default/baseof.html
@@ -28,7 +28,7 @@
   <div class="font-medium text-sm">
     <main id="main-content" class="grow z-0 mt-5 px-10 py-2 max-w-6xl m-auto">
       {{ block "main" . }}{{ end }}
-      {{ if and (.Site.Params.footer.showScrollToTop | default true) (gt .WordCount 200) }}
+      {{ if and (.Site.Params.footer.showScrollToTop | default false) (gt .WordCount 200) }}
       <div class="pointer-events-none absolute top-[100vh] bottom-0 w-12 ltr:right-0 rtl:left-0">
         <a href="#the-top"
           class="pointer-events-auto sticky top-[calc(100vh-5.5rem)] flex h-12 w-12 items-center justify-center rounded-full bg-neutral/50 text-xl text-neutral-700 backdrop-blur hover:text-primary-600 dark:bg-neutral-800/50 dark:text-neutral dark:hover:text-primary-400"
