--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -150,8 +150,10 @@
           <div style="height: 30px; width: 1px; background-color: black;"></div>
           <div class="px-1">
             <!-- Need to connect volume adjustor to this svg -->
-            <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
-              style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+            <button onclick="toggleVolume()" style="margin-top: 0.4rem;">
+              <img src="/volume.svg" alt="Volume Icon" width="20" height="20"
+                style="margin-left: 0.3rem; margin-right: 0.3rem;"></img>
+            </button>
           </div>
           <div style="height: 30px; width: 1px; background-color: black;"></div>
         </div>
@@ -216,6 +218,12 @@
     #third-row {
       display: none;
     }
+
+    #player {
+      position: relative;
+      top: 90px;
+      left: -35px;
+    }
   }
 
   /* move social media, page links, play button, and volume button to third row */
@@ -234,6 +242,12 @@
 
     #play-volume-line {
       display: none;
+    }
+
+    #player {
+      position: absolute;
+      top: 107px;
+      left: 190px;
     }
   }
 
@@ -254,14 +268,11 @@
       margin-left: 0.5rem;
     }
   }
-  
+
    /* Location and visual appearance of volume slider */
   #player {
     width: 30px;
     height: 145px;
-    position: relative;
-    top: 90px;
-    left: -35px;
     background-color: lightgray;
     border-radius: 5px;
     display: none;
