--- a/themes/kscu-theme/layouts/partials/header/basic.html
+++ b/themes/kscu-theme/layouts/partials/header/basic.html
@@ -75,7 +75,7 @@
             <!-- Need to connect volume adjustor to this slider -->
             <div id="player">
               <i class="fa fa-volume-up absolute" style="top:0; margin-left: 9px; margin-top: 4px;"></i>
-              <input type="range" min="1" max="100" value="50" class="slider" id="volume">
+              <input type="range" min="1" max="100" value="50" class="slider" id="volume" onchange="showValue(this.value)" oninput="showValue(this.value)">
               <i class="fa fa-volume-down absolute" style="bottom:0; margin-left: 11px; margin-bottom: 4px;"></i>
             </div>
             <!-- contain to row by setting height to 29px -->
@@ -322,7 +322,7 @@
 
   .slider {
     -webkit-appearance: none;
-    -webkit-transform:rotate(90deg);
+    -webkit-transform:rotate(270deg);
     position: absolute;
     width: 100px;
     height: 4px;
